// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Flex Component correctly 1`] = `
<div
  className="sc-hMqMXs dUGKCZ"
/>
`;

exports[`renders the Flex Component correctly 2`] = `
<div
  className="sc-hMqMXs htCdvF"
/>
`;

exports[`renders the Flex Component correctly 3`] = `
<div
  className="sc-hMqMXs hwTrSo"
/>
`;
